# MiServer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  release.py
MiServer/: CMakeLists.txt  Server.cpp  main.cpp
MiServer/RPC/: RPC.cpp  RPCList.cpp
MiServer/RPC/incoming/: ChatMessage.cpp  ClickPlayer.cpp  ClientJoin.cpp  DeathNotification.cpp  DialogResponse.cpp  EditAttachedObject.cpp  EnterVehicle.cpp  ExitVehicle.cpp  GiveTakeDamage.cpp  HandleUnsupported.cpp  InteriorChangeNotification.cpp  MapMarker.cpp  RequestClass.cpp  RequestSpawn.cpp  ScmEvent.cpp  SendCommand.cpp  SendSpawn.cpp  UpdateScoresAndPings.cpp  VehicleDamaged.cpp
MiServer/RPC/incomming/: ChatMessage.cpp  ClientJoin.cpp  DeathNotification.cpp  DialogResponse.cpp  EnterVehicle.cpp  ExitVehicle.cpp  GiveActorDamage.cpp  HandleUnsupported.cpp  InteriorChangeNotification.cpp  MapMarker.cpp  RequestClass.cpp  RequestSpawn.cpp  ScmEvent.cpp  SendCommand.cpp  SendSpawn.cpp  UpdateScoresAndPings.cpp  VehicleDamaged.cpp
MiServer/RPC/outgoing/: InitGame.cpp  PlayerEnterVehicle.cpp  PlayerExitVehicle.cpp  SendClientMessage.cpp  SetPlayerArmour.cpp  SetPlayerColor.cpp  SetPlayerFacingAngle.cpp  SetPlayerFightingStyle.cpp  SetPlayerHealth.cpp  SetPlayerPos.cpp  SetPlayerSkin.cpp  WorldPlayerAdd.cpp  WorldVehicleAdd.cpp  WorldVehicleRemove.cpp
MiServer/event/: EventPool.cpp  EventQueue.cpp
MiServer/netgame/: NetGame.cpp  Player.cpp  Vehicle.cpp
MiServer/packet/: AimSync.cpp  BulletSync.cpp  PassangerSync.cpp  PlayerSync.cpp  PositionSync.cpp  UnoccupiedSync.cpp  VehicleSync.cpp
MiServer/player/: Player.cpp  PlayerPool.cpp
MiServer/query/: SAMPQuery.cpp
MiServer/server/: Server.cpp  ServerInstance.cpp
MiServer/vehicle/: Vehicle.cpp  VehiclePool.cpp
MiServerxx/: CMakeLists.txt
MiServerxx/RPC/: RPC.cpp
MiServerxx/RPC/incoming/: ClientJoin.cpp  EnterVehicle.cpp  RequestSpawn.cpp  ScmEvent.cpp  UpdateScoresAndPings.cpp  VehicleDamaged.cpp
MiServerxx/RPC/outgoing/: ClientCheck.cpp  SendClientMessage.cpp  SetGravity.cpp  SetPlayerArmour.cpp  SetPlayerColor.cpp  SetPlayerFacingAngle.cpp  SetPlayerFightingStyle.cpp  SetPlayerHealth.cpp  SetPlayerPos.cpp  WorldVehicleRemove.cpp
MiServerxx/netgame/: Vehicle.cpp
MiServerxx/packet/: AimSync.cpp  PlayerSync.cpp  PositionSync.cpp
MiServerxx/server/: ServerInstance.cpp
MiServerxx/util/: euler.cpp  strsplit.cpp
cmake/: AddMiServerTest.cmake  config.h.in
docs/MiServer/: event.md  netgame.md  server.md
docs/MiServerxx/: RPC.md  event.md  netgame.md  packet.md  server.md
include/MiServer/: MiServer.h  MiServer.hpp  Server.hpp  config.h  core.h  event.h  netgame.h  server.h  types.h
include/MiServer/RPC/: RPC.hpp  RPCList.hpp
include/MiServer/event/: EventPool.hpp  EventQueue.hpp  EventTypes.hpp
include/MiServer/netgame/: NetGame.hpp  Player.hpp  Pool.hpp  Vehicle.hpp
include/MiServer/object/: Object.hpp  ObjectPool.hpp  ObjectType.hpp  defines.hpp
include/MiServer/packet/: AimSync.hpp  BulletSync.hpp  PositionSync.hpp  SyncData.hpp
include/MiServer/player/: Player.hpp  PlayerPool.hpp  PlayerTypes.hpp  defines.hpp
include/MiServer/query/: SAMPQuery.hpp
include/MiServer/server/: Server.hpp  ServerConfig.hpp  ServerInstance.hpp
include/MiServer/util/: strformat.hpp  strsplit.hpp
include/MiServer/vehicle/: Vehicle.hpp  VehiclePool.hpp  VehicleTypes.hpp  defines.hpp
include/MiServerxx/: MiServerxx.hpp  config.h  types.h
include/MiServerxx/RPC/: RPC.hpp  RPCList.hpp  RPCReceiver.hpp
include/MiServerxx/core/: Core.hpp  CoreInstance.hpp  ServerConfig.hpp
include/MiServerxx/event/: Event.hpp  EventPool.hpp  EventQueue.hpp  EventTypes.hpp
include/MiServerxx/netgame/: Dialog.hpp  NetGame.hpp  Player.hpp  Pool.hpp  Vehicle.hpp
include/MiServerxx/packet/: AimSync.hpp  BulletSync.hpp  PacketHandlerInterface.hpp  PassengerSync.hpp  PlayerSync.hpp  PositionSync.hpp  SyncData.hpp  UnoccupiedSync.hpp  VehicleSync.hpp  defines.hpp
include/MiServerxx/query/: SAMPQuery.hpp
include/MiServerxx/server/: Server.hpp  ServerConfig.hpp  ServerInstance.hpp
include/MiServerxx/util/: euler.hpp  strformat.hpp  strsplit.hpp  timer.hpp
lib/: CMakeLists.txt
source/: CMakeLists.txt
source/MiServer/: CMakeLists.txt  core.cpp  event.cpp  netgame.cpp  server.cpp
source/MiServerxx/: CMakeLists.txt
source/MiServerxx/RPC/: RPC.cpp  RPCList.cpp  RPCReceiver.cpp
source/MiServerxx/RPC/incoming/: ChatMessage.cpp  ClientJoin.cpp  DeathNotification.cpp  DialogResponse.cpp  EnterVehicle.cpp  ExitVehicle.cpp  HandleUnsupported.cpp  InteriorChangeNotification.cpp  RequestClass.cpp  RequestSpawn.cpp  ScmEvent.cpp  SendCommand.cpp  SendSpawn.cpp  UpdateScoresAndPings.cpp  VehicleDamaged.cpp
source/MiServerxx/RPC/outgoing/: DisableCheckpoint.cpp  InitGame.cpp  PlayerEnterVehicle.cpp  PlayerExitVehicle.cpp  SendClientMessage.cpp  SetCheckpoint.cpp  SetPlayerArmour.cpp  SetPlayerColor.cpp  SetPlayerFacingAngle.cpp  SetPlayerFightingStyle.cpp  SetPlayerHealth.cpp  SetPlayerPos.cpp  SetPlayerSkin.cpp  WorldPlayerAdd.cpp  WorldVehicleAdd.cpp  WorldVehicleRemove.cpp
source/MiServerxx/core/: Core.cpp  CoreInstance.cpp  PacketHandler.cpp  RPCHandler.cpp
source/MiServerxx/event/: EventPool.cpp
source/MiServerxx/netgame/: Dialog.cpp  NetGame.cpp  Player.cpp  Vehicle.cpp
source/MiServerxx/packet/: AimSync.cpp  BulletSync.cpp  Connection.cpp  PassangerSync.cpp  PlayerSync.cpp  PositionSync.cpp  UnoccupiedSync.cpp  VehicleSync.cpp
source/MiServerxx/query/: SAMPQuery.cpp
source/MiServerxx/server/: Server.cpp
source/MiServerxx/util/: euler.cpp
tests/: CMakeLists.txt  simple.c  simple.cpp  simplexx.cpp
