add_library(miserver STATIC
	"server/Server.cpp"
	"player/Player.cpp"
	"player/PlayerPool.cpp"
	"packet/AimSync.cpp" 
	"packet/BulletSync.cpp" 
	"packet/PassangerSync.cpp" 
	"packet/PlayerSync.cpp" 
	"packet/UnoccupiedSync.cpp" 
	"packet/VehicleSync.cpp" 
	"RPC/RPCList.cpp" 
	"RPC/RPC.cpp" 
	"server/ServerInstance.cpp" 
	"vehicle/VehiclePool.cpp" 
	"packet/PositionSync.cpp" 
	"RPC/incomming/EnterVehicle.cpp"
	"RPC/incomming/ExitVehicle.cpp"
	"RPC/incomming/VehicleDamaged.cpp"
	"RPC/incomming/ScmEvent.cpp"
	"RPC/incomming/VehicleDestroyed.cpp"
	"RPC/incomming/SendSpawn.cpp"
	"RPC/incomming/ChatMessage.cpp"
	"RPC/incomming/InteriorChangeNotification.cpp"
	"RPC/incomming/DeathNotification.cpp"
	"RPC/incomming/SendCommand.cpp"
	"RPC/incomming/ClickPlayer.cpp"
	"RPC/incomming/DialogResponse.cpp"
	"RPC/incomming/ClientCheckResponse.cpp"
	"RPC/incomming/GiveTakeDamage.cpp"
	"RPC/incomming/GiveActorDamage.cpp"
	"RPC/incomming/MapMarker.cpp"
	"RPC/incomming/RequestClass.cpp"
	"RPC/incomming/RequestSpawn.cpp"
	"RPC/incomming/MenuSelect.cpp"
	"RPC/incomming/MenuQuit.cpp"
	"RPC/incomming/SelectTextDraw.cpp"
	"RPC/incomming/PickedUpPickup.cpp"
	"RPC/incomming/SelectObject.cpp"
	"RPC/incomming/EditAttachedObject.cpp"
	"RPC/incomming/EditObject.cpp"
	"RPC/incomming/UpdateScoresAndPings.cpp"
	"RPC/incomming/ClientJoin.cpp"
	"RPC/incomming/NPCJoin.cpp"
	"RPC/incomming/CameraTarget.cpp" 
	"RPC/incomming/HandleUnsupported.cpp"  
	"event/EventPool.cpp" 
	"event/EventQueue.cpp")

target_link_directories(miserver PUBLIC ${CMAKE_INSTALL_PREFIX})
target_link_libraries(miserver PRIVATE mirak)

install(TARGETS miserver)